# VulkanAbstractionLayer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  EntryPoint.cpp  LICENSE  README.md  imgui.ini  main_fragment.glsl  main_fragment.spv  main_vertex.glsl  main_vertex.spv
VulkanAbstractionLayer/: ArrayUtils.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  ComputeShader.cpp  ComputeShader.h  DependencyStorage.cpp  DependencyStorage.h  DescriptorBinding.cpp  DescriptorBinding.h  DescriptorCache.cpp  DescriptorCache.h  GraphicShader.cpp  GraphicShader.h  ImGuiContext.cpp  ImGuiContext.h  ImGuiRenderPass.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  ModelLoader.cpp  ModelLoader.h  Pipeline.cpp  Pipeline.h  RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Shader.h  ShaderLoader.cpp  ShaderLoader.h  ShaderReflection.cpp  ShaderReflection.h  ShaderType.h  (+14 more)
examples/: CMakeLists.txt  EntryPoint.cpp  imgui.ini  main_fragment.glsl  main_fragment.spv  main_vertex.glsl  shadow_vertex.glsl
examples/clothsim/: CMakeLists.txt  EntryPoint.cpp  ball_vertex.glsl  cloth_vertex.glsl  compile_shaders.bat  imgui.ini  main_compute.glsl  main_fragment.glsl  main_vertex.glsl
examples/clothsim/models/: cube.mtl
examples/dragons/: CMakeLists.txt  EntryPoint.cpp  compile_shaders.bat  imgui.ini  main_fragment.glsl  main_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl
examples/dragons/textures/: brdf_lut.dds
examples/gi/: CMakeLists.txt  EntryPoint.cpp  compile_shaders.bat  imgui.ini  main_fragment.glsl  main_vertex.glsl  probe_main_vertex.glsl  probe_skybox_vertex.glsl  probe_view_vertex.glsl  reflection_probe_fragment.glsl  reflection_probe_vertex.glsl  skybox_fragment.glsl
examples/ltc/: CMakeLists.txt  EntryPoint.cpp  imgui.ini  main_fragment.glsl  main_vertex.glsl
examples/ltc/ltc/: EntryPoint.cpp
examples/ltc/models/Sponza/: sponza.mtl
examples/terrain/: CMakeLists.txt  EntryPoint.cpp  compile_shaders.bat  imgui.ini  main_fragment.glsl  main_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  skybox_fragment.glsl  tess_control.tesc  tess_eval.tese
examples/textures/: white_filtered.dds
